<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <AutoCompleteTextView
        android:id="@+id/inputStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_start"
        android:inputType="text"/>

    <AutoCompleteTextView
        android:id="@+id/inputEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_end"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/buttonFindPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/find_route"
        android:enabled="true"/>
</LinearLayout>